# Portafolio

./: .gitignore  Hola mundo.py  README.md  Reto_Kaggle_Titanic.ipynb  Sistema_recomendador.ipynb  Titanic_Classification.ipynb  calculadora.py  pyproject.toml  repaso_python.ipynb
Churn_Prediction/: Data_transformation.ipynb
Churn_Prediction/model_final/: xgboost_model.cbm  xgboost_model.json
Classification_ML/: Titanic_Classification.ipynb
LLM/: 2. BETO - Fine Tunning a LLM with tag by keywords (1).ipynb
Nearest_Neighbor/: Repaso_scikit_learn.ipynb
Time Series/: TIME_SERIES_BANCOLOMBIA_LIBRARY_YFINANCE.ipynb
