[tool.poetry]
name = "portafolio andres jimenez"
version = "0.0.0"
description = ""
authors = ["jonjimenez99 <andrescover.99@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
